css/theme.css
/* Table of contents
   ========================================================================== */

/**
 * - Principles
 * - Variables
 * - Layout
 * - Base Styles
 * - Typography
 * - Links
 * - Images
 * - Media Queries
 */

/* Principles
   ========================================================================== */

/**
 * https://github.com/necolas/idiomatic-css#general-principles
 */

/* Variables
   ========================================================================== */

:root {
  --container-max-width: 1200px;
  --container-narrow-max-width: 1000px;

  --color-text: #333;
  --color-primary: #eb5757;
  --color-secondary: #bdbdbd;
  --color-border: #e0e0e0;

  --font-family-sans-serif: "Raleway", "HelveticaNeue", "Helvetica Neue",
    Helvetica, Arial, sans-serif;
  --font-family-serif: Georgia, "Times New Roman", Times, serif;
}

/* Layout
   ========================================================================== */

.container,
.container--narrow {
  width: 90%;
  max-width: var(--container-max-width);
  margin: 0 auto;
}
.container--narrow {
  max-width: var(--container-narrow-max-width) !important;
}

/* Base Styles
   ========================================================================== */

* {
  box-sizing: border-box;
}

/**
 * "html" is set to 62.5% so that all the REM measurements are based on 10px sizing (1.5rem = 15px)
 */

html {
  height: 100%;
  font-size: 62.5%;
}
body {
  display: flex;
  flex-direction: column;
  min-height: 100%;
  color: var(--color-text);
  font-family: var(--font-family-sans-serif);
  font-size: 1.8em; /* Currently ems cause chrome bug misinterpreting rems on body element */
  font-weight: 400;
  line-height: 2.5rem;
}

/* Typography
   ========================================================================== */

h1,
h2,
h3,
h4 {
  font-family: var(--font-family-serif);
  font-weight: 400;
}
h1 {
  margin: 0 0 2rem 0;
  font-size: 4.8rem;
  line-height: 5.5rem;
}
h2 {
  margin: 0 0 1rem 0;
  font-size: 3.6rem;
  line-height: 4.1rem;
}
h3 {
  margin: 0 0 1rem 0;
  font-size: 2.4rem;
  line-height: 2.7rem;
}
h4 {
  margin: 0 0 1rem 0;
  font-size: 1.8rem;
  line-height: 2rem;
}
p {
  margin: 2rem 0;
}
strong {
  color: var(--color-secondary);
  font-size: 1.4rem;
  font-weight: 700;
  letter-spacing: 0.05rem;
  text-transform: uppercase;
}

/* md */
@media (min-width: 670px) {
  h1 {
    margin: 0 10rem 4rem 10rem;
    font-size: 9.6rem;
    line-height: 11rem;
  }
}

/* Links
   ========================================================================== */

a {
  color: var(--color-primary);
}
a:hover {
  text-decoration: none;
}
h2 > a {
  color: var(--color-primary);
  text-decoration: none;
}
h2 > a:hover {
  filter: saturate(1.5);
}

/* Images
   ========================================================================== */

figure {
  margin: 0 -1.5rem;
}
img {
  max-width: 100%;
}
figcaption {
  margin: 0 1.5rem;
  color: var(--color-secondary);
  font-size: 1.4rem;
  line-height: 1.6rem;
}

/* Media Queries
   ========================================================================== */

/* md */
@media (min-width: 670px) {
}

/* lg */
@media (min-width: 940px) {
}

/* xl */
@media (min-width: 1260px) {
}

